--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,17 @@
 .highlighted{
     background-color: yellow;
 }
+
+table{
+    border-collapse: collapse;
+    width: 80%;
+}
+
+thead{
+    background-color: #4EA0FF;
+    color: white;
+}
+
+.line{
+    background-color: lightblue;
+}
