--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 
 .mark{
     color: lightskyblue;
+    font-weight: bold;
 }
 
 .highlighted{
@@ -22,7 +23,18 @@
 
 table{
     border-collapse: collapse;
-    width: 80%;
+}
+
+.t1{
+    width: 25%;
+}
+
+.t2{
+    width: 25%;
+}
+
+.t3{
+    width: 50%;
 }
 
 thead{
@@ -41,7 +53,19 @@ h4{
 .text1{
     font-size: 25px;
     font-weight: bold;
-    color: blue;
-    /* ??? */
+    color: white;
+    text-align: left;
+    background-image: url(../img/monitor.jpg);
+    width: 300px;
+    height: 200px;
+}
 
+.text2{
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+    text-align: left;
+    background-image: url(../img/graph.jpg);
+    width: 300px;
+    height: 200px;
 }
